atualização da aula 2

--- a/index.html
+++ b/index.html
@@ -17,11 +17,51 @@
             <input type="text" name="busca" id="busca" placeholder="Digite o nome do atleta">
             <button>Pesquisar</button>
         </section>
+        <!-- abaixo a section para exibir os resultados -->
+        <section class="resultados-pesquisa">
+            <div class="item-resultado">
+
+                <h2>
+                    <a href="#" target="_blank">Rebeca Andrande</a>
+                </h2>
+                <p class="descricao-meta">
+                    Rebeca Andrade: A nova estrela da ginástica brasileira
+                    Rebeca Andrade é um dos maiores nomes da ginástica artística brasileira e mundial. Com sua força,
+                    elegância e determinação, ela conquistou o coração dos brasileiros e se tornou um verdadeiro ícone
+                    do
+                    esporte. A atleta, que iniciou na ginástica ainda criança, coleciona medalhas em competições
+                    nacionais e
+                    internacionais, incluindo ouro olímpico e mundial
+                </p>
+                <a href="https://pt.wikipedia.org/wiki/Rebeca_Andrade" target="_blank">Mais informações</a>
+            </div>
+            <div class="item-resultado">
+                <h2>
+                    <a href="#" target="_blank">Rayssa Leal</a>
+                </h2>
+                <p class="descricao-meta">
+                    Rayssa Leal, conhecida como a "Fadinha", é uma das maiores promessas do skate mundial. Com apenas alguns anos de carreira, ela já conquistou diversos títulos e patrocinadores de grande porte. Sua habilidade e carisma a tornaram um ícone da nova geração de skatistas, inspirando jovens de todo o mundo.
+                </p>
+                <a href="#" target="_blank">Mais informações</a>
+            </div>
+            
+            <div class="item-resultado">
+                <h2>
+                    <a href="#" target="_blank">Beatriz Souza</a>
+                </h2>
+                <p class="descricao-meta">
+                    Beatriz Souza é uma jovem promessa do judô brasileiro. Com sua técnica apurada e determinação, ela vem se destacando nas competições nacionais e internacionais. Beatriz é um exemplo de atleta dedicada e focada, que busca constantemente aprimorar suas habilidades e conquistar novos títulos.
+                </p>
+                <a href="#" target="_blank">Mais informações</a>
+            </div>
+        </section>
     </main>
+   
     <footer>
         <p>2024 - Atletas do Brasil. Todos os direitos reservados</p>
         <p>Entre em contato pelo email: <a href="maito:mateusvictor1@hotmail.com">mateusvictor1@hotmail.com</a></p>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
