criado o dados.js e atualizado o app.js e o index.html

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <p>Entre em contato pelo email: <a href="maito:mateusvictor1@hotmail.com">mateusvictor1@hotmail.com</a></p>
     </footer>
     <script src="app.js"></script>
+    <script src="dados.js"></script>
 </body>
 
 </html>
