atualização da aula5

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <section>
-            <input type="text" name="busca" id="busca" placeholder="Digite o nome do atleta">
+            <input type="text" id="campo-pesquisa" placeholder="Digite o nome do atleta">
             <button onclick="pesquisar()">Pesquisar</button>
         </section>
         <!-- abaixo a section para exibir os resultados -->
